[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/ArenaSelect.gd" type="Script" id=1]
[ext_resource path="res://Sprites/mesa_1.png" type="Texture" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/dynamicFont.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]

[node name="ArenaSelect" type="Panel"]
margin_left = 165.774
margin_top = 158.163
margin_right = 2083.77
margin_bottom = 1236.16
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="mesa_1" type="Sprite" parent="."]
position = Vector2( 794.226, 381.837 )
scale = Vector2( 0.7, 0.63 )
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.00784314, 0.160784, 0.45098, 1 )
margin_left = 454.226
margin_top = 2.0
margin_right = 1101.23
margin_bottom = 733.0
theme = ExtResource( 3 )

[node name="PlayButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.539
margin_top = 213.235
margin_right = 127.461
margin_bottom = 323.235
rect_pivot_offset = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Jogar"

[node name="ArenaLabel" type="Label" parent="Panel"]
margin_left = 220.0
margin_top = 49.8373
margin_right = 445.0
margin_bottom = 122.837
custom_fonts/font = ExtResource( 4 )
text = "Arena"
align = 1
valign = 1

[node name="ArenaLeftButton" type="Button" parent="Panel"]
margin_left = 180.0
margin_top = 60.1584
margin_right = 220.0
margin_bottom = 103.158
theme = ExtResource( 3 )

[node name="ArenaRightButton" type="Button" parent="Panel"]
margin_left = 450.0
margin_top = 60.1584
margin_right = 490.0
margin_bottom = 103.158
theme = ExtResource( 3 )

[node name="PlayersAmountLabel" type="Label" parent="Panel"]
margin_left = 120.0
margin_top = 169.837
margin_right = 345.0
margin_bottom = 242.837
custom_fonts/font = ExtResource( 4 )
text = "NÃºmero de 
jogadores"

[node name="PlayersAmount" type="Label" parent="Panel"]
margin_left = 400.539
margin_top = 179.516
margin_right = 459.539
margin_bottom = 219.516
theme = ExtResource( 3 )
text = "3"
align = 1
valign = 2

[node name="PlayersAmountLeftButton" type="Button" parent="Panel"]
margin_left = 350.461
margin_top = 179.516
margin_right = 390.461
margin_bottom = 222.516
theme = ExtResource( 3 )

[node name="PlayersAmountRightButton" type="Button" parent="Panel"]
margin_left = 470.0
margin_top = 179.837
margin_right = 510.0
margin_bottom = 222.837
theme = ExtResource( 3 )

[node name="MatchTimeLabel" type="Label" parent="Panel"]
margin_left = 120.0
margin_top = 269.837
margin_right = 345.0
margin_bottom = 342.837
custom_fonts/font = ExtResource( 4 )
text = "Tempo da
partida"

[node name="MatchTime" type="Label" parent="Panel"]
margin_left = 400.461
margin_top = 279.837
margin_right = 461.461
margin_bottom = 319.837
theme = ExtResource( 3 )
text = "5:00"
align = 1
valign = 2

[node name="MatchTimeLeftButton" type="Button" parent="Panel"]
margin_left = 350.461
margin_top = 279.837
margin_right = 390.461
margin_bottom = 322.837
theme = ExtResource( 3 )

[node name="MatchTimeRightButton" type="Button" parent="Panel"]
margin_left = 470.461
margin_top = 279.837
margin_right = 510.461
margin_bottom = 322.837
theme = ExtResource( 3 )

[node name="TurnTimeLabel" type="Label" parent="Panel"]
margin_left = 120.0
margin_top = 369.837
margin_right = 345.0
margin_bottom = 442.837
custom_fonts/font = ExtResource( 4 )
text = "Tempo do
turno"

[node name="TurnTime" type="Label" parent="Panel"]
margin_left = 400.539
margin_top = 380.516
margin_right = 459.539
margin_bottom = 420.516
theme = ExtResource( 3 )
text = "10"
align = 1
valign = 2

[node name="TurnTimeLeftButton" type="Button" parent="Panel"]
margin_left = 350.0
margin_top = 379.837
margin_right = 390.0
margin_bottom = 422.837
theme = ExtResource( 3 )

[node name="TurnTimeRightButton" type="Button" parent="Panel"]
margin_left = 470.0
margin_top = 380.516
margin_right = 510.0
margin_bottom = 423.516
theme = ExtResource( 3 )

